Modified the code to fix the SonarQube errors